Added MethodCallValiddator and parameter parsing